# heyclaude

./: .gitignore  Makefile  README.md  install.sh  launcher.py  pyproject.toml  setup.py
Formula/: heyclaude.rb
hooks/: heyclaude-hook.sh
resources/: icon.icns
scripts/: release.sh
src/heyclaude/: __init__.py  app.py  config.py  hooks.py  notifier.py  server.py  telegram_bot.py  terminal.py  transcript.py
src/heyclaude/ui/: __init__.py  preferences.py
